manifests/watchtower/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-http
  namespace: media
spec:
  entryPoints: ["web"]
  routes:
    - kind: Rule
      match: Host(`jellyfin.watchtower.local`)
      services:
        - name: jellyfin
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-https
  namespace: media
spec:
  entryPoints: ["websecure"]
  routes:
    - kind: Rule
      match: Host(`jellyfin.watchtower.local`)
      services:
        - name: jellyfin
          port: 8096
  tls: {}
